# hopcalc

./: CMakeLists.txt  LICENSE  README.md  hopcalc.hpp
cmake/: HopCalcConfig.cmake
src/: hopcalc.cpp
tests/: CMakeLists.txt  hoptest.cpp
